Fixed alignemnt of control panel icons, moved options checks to Player, added fullscreen functionality

--- a/web/css/player.css
+++ b/web/css/player.css
@@ -153,7 +153,7 @@
     background-color: rgba(255, 255, 255, 0.2);
     justify-content: center;
     align-items: center;
-    margin-left: auto;
+    margin-left: 0;
     margin-right: 8px;
     margin-top: 8px;
 }
@@ -167,7 +167,7 @@
     background-color: rgba(255, 255, 255, 0.2);
     justify-content: center;
     align-items: center;
-    margin-left: auto;
+    margin-left: 0;
     margin-right: 8px;
     margin-top: 8px;
 }
